Hamza: Fixed Issue Copying

--- a/SaloonAppProvider/src/assets/languages/englishj.json
+++ b/SaloonAppProvider/src/assets/languages/englishj.json
@@ -29,5 +29,10 @@
     "_28":"Search for a place or venue",
     "_29":"Log in",
     "_30":"Forgot your business Password",
-    "_31": "We'll send you s secure password to "
+    "_31": "We'll send you s secure password to ",
+    "_32":"Verify Your Email to continue",
+    "_33": "We've sent a OTP to your Email ",
+    "_34":"OTP",
+    "_35":"Enter Your New Password and OTP sent to",
+    "_36":"New Password"
 }
