Profile Categories Filters + API Integration

--- a/SaloonAppProvider/src/assets/languages/englishj.json
+++ b/SaloonAppProvider/src/assets/languages/englishj.json
@@ -49,6 +49,8 @@
     "_45":"Paste your website URL",
     "_46":"Business location",
     "_47":"Create profile",
-    "_48":"Pick a time"
+    "_48":"Pick a time",
+    "_49":"Primary category",
+    "_50":"Secondary category"
 
 }
