--- a/SaloonAppProvider/android/app/src/main/res/values/strings.xml
+++ b/SaloonAppProvider/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">SaloonAppProvider</string>
+    <string name="app_name">Nuyou Business</string>
 </resources>
