Hamza :Added reviews

--- a/SaloonAppProvider/src/assets/languages/englishj.json
+++ b/SaloonAppProvider/src/assets/languages/englishj.json
@@ -55,6 +55,8 @@
 
     "..":"-------------------------------------------------------------------------------   SETTINGS",
 
-    "_51":"View Profile"
+    "_51":"View Profile",
+    "_52":"Reviews",
+    "_53":"No Reviews Yet"
 
 }
