--- a/SaloonAppProvider/src/assets/languages/englishj.json
+++ b/SaloonAppProvider/src/assets/languages/englishj.json
@@ -57,6 +57,7 @@
 
     "_51":"View Profile",
     "_52":"Reviews",
-    "_53":"No Reviews Yet"
-
+    "_53":"No Reviews Yet",
+    "_54": "Want to change your password?",
+    "_55":"You can change it here by verifyig its you"
 }
