Hamza: Added Delete API and gallery

--- a/SaloonAppProvider/src/assets/languages/englishj.json
+++ b/SaloonAppProvider/src/assets/languages/englishj.json
@@ -59,5 +59,8 @@
     "_52":"Reviews",
     "_53":"No Reviews Yet",
     "_54": "Want to change your password?",
-    "_55":"You can change it here by verifyig its you"
+    "_55":"You can change it here by verifyig its you",
+    "_56": "Delete account",
+    "_57": "Are you sure you want to leave Nuyou",
+    "_58": "Delete my account"
 }
